# heuristicos

./: Ejemplos_uso_Heuristicos (2).ipynb  README.md  ejemplos_heuristicos.ipynb  examples_ejemplos_heuristicos.ipynb  index.html  pyproject.toml
heuristicos_pkg/: knapsack.py  tsp.py  viajero.py
tests/: test_knapsack.py  test_viajero.py  viajero.py
